--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scraper-v",
+  "name": "scraping-app",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -7,11 +7,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2",
+    "express": "^4.19.2", 
     "puppeteer": "^22.14.0",
     "xlsx": "^0.18.5"
   }
